remove default value of the channel

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <span style="color:#5cb85c">API Key:</span>
           <input type="text" name="apikey" id="fapikey" class="form-control lineinput"
               onchange="chnageChannel()"
-              value= "default"></input>
+              value= ""></input>
           <p class='description'></p><span style="color:#5cb85c"> Channel:</span>
           <input type="text" name="channel" id="fchannel" class="form-control lineinput"
               onchange="chnageChannel()"
